<resources>
    <string name="app_name">Serenity Shades</string>

    <string name="based_on_th">
Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling worried. Something may be bothering you, and it could be impacting your ability to concentrate on your daily tasks. It\'s important to take some time to reflect on what\'s causing your worry and explore ways to address it. Remember, it\'s okay to not be okay and seeking help from a trusted friend or professional can be beneficial in managing your emotions. Take care of yourself and don\'t hesitate to reach out for support if needed.
</string>
    <string name="shy_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling shy. You may be feeling a bit reserved or hesitant in social situations. Remember that it\'s okay to take your time and step out of your comfort zone at your own pace. Building confidence and self-esteem takes time, but with practice and support, you can overcome your shyness and embrace new experiences.</string>
    <string name="happy_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling happy. It\'s wonderful to see you in such a positive state! Enjoy and savor this moment of happiness. Use this positive energy to spread joy to others and make the most out of every opportunity that comes your way.</string>
    <string name="sad_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling sad. It\'s natural to experience sadness from time to time. Allow yourself to acknowledge and process your emotions. Remember that you\'re not alone, and reaching out to loved ones or seeking professional help can provide the support and comfort you need to navigate through this difficult time.</string>
    <string name="calm_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling calm. It\'s great to see you in a state of tranquility. Embrace this calmness and use it as an opportunity to recharge and find inner peace. Take a moment to relax, breathe deeply, and appreciate the present moment.</string>
    <string name="excited_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling excited. That\'s wonderful! Embrace this excitement and let it fuel your motivation and enthusiasm. Channel your energy into pursuing your passions and engaging in activities that bring you joy. Enjoy the thrill of new adventures and make the most of this exhilarating feeling.</string>
    <string name="disgust_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling disgusted. It\'s understandable to experience moments of disgust. Allow yourself to acknowledge these feelings and explore the reasons behind them. Use this as an opportunity to set boundaries, eliminate toxic influences, and prioritize your well-being. Remember that you deserve to be surrounded by positivity and things that resonate with your values.</string>
    <string name="in_love_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling in love. Love is a beautiful emotion that can bring immense joy and fulfillment. Embrace this feeling and cherish the connections and relationships that bring love into your life. Show appreciation to those you care about and let love guide your actions and decisions.</string>
    <string name="dissapointed_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling disappointed. It\'s natural to feel let down at times. Allow yourself to process and express your disappointment. Take this as an opportunity to reflect on your expectations, learn from the experience, and find ways to move forward with resilience. Remember that setbacks and disappointments are temporary, and brighter days lie ahead.</string>
    <string name="angry_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling angry. Anger is a valid emotion, and it\'s important to acknowledge and understand it. Take a moment to reflect on the source of your anger and find healthy ways to express and manage it. Practice self-care, engage in activities that help you release tension, and seek support if needed. Remember that you deserve to have your emotions validated, and finding constructive ways to channel your anger can lead to personal growth and resolution of conflicts.</string>
    <string name="anxious_quote">Based on the colors and emojis you\'ve chosen, it seems like you\'re feeling anxious. Anxiety can be overwhelming, but remember that you have the strength to navigate through it. Take some time to identify the triggers of your anxiety and explore coping mechanisms that work best for you. Practice self-care, engage in relaxation techniques, and consider reaching out to a trusted friend or professional for support. Remember, it\'s okay to ask for help, and taking proactive steps to manage your anxiety can lead to a greater sense of peace and well-being.</string>

    <string name="calm_suggestion">Consider taking a few moments to practice deep breathing and meditation. Find a quiet place where you can relax and let go of any stress.</string>
    <string name="anxious_suggestion">Try writing down your thoughts and worries to help clear your mind. Engage in activities that bring you comfort and relaxation.</string>
    <string name="sad_suggestion">Reach out to a trusted friend or family member for support. Engage in activities that bring you joy and allow yourself to feel your emotions.</string>
    <string name="excited_suggestion">Channel your excitement into planning and taking action towards your goals. Embrace the positive energy and enjoy the anticipation.</string>
    <string name="disgust_suggestion">Identify the triggers that cause discomfort and take steps to minimize your exposure to them. Surround yourself with positive influences and things that bring you happiness.</string>
    <string name="happy_suggestion">Share your happiness with others and spread positivity. Engage in activities that uplift your mood and bring you joy.</string>
    <string name="in_love_suggestion">Celebrate love by expressing your affection and gratitude towards your loved ones. Plan a special date or surprise to show your appreciation.</string>
    <string name="angry_suggestion">Take a break and find a healthy outlet for your anger, such as physical exercise or deep breathing. Communicate your feelings assertively but calmly.</string>
    <string name="shy_suggestion">Challenge yourself to step out of your comfort zone gradually. Practice self-acceptance and remind yourself that your voice matters.</string>
    <string name="disappointed_suggestion">Acknowledge your disappointment and allow yourself to process the emotions. Seek support from others and explore alternative paths or opportunities.</string>

    <string name="calm_task">Meditate for 10 minutes</string>
    <string name="anxious_task">Take a 10-min walk</string>
    <string name="sad_task">Listen to uplifting music</string>
    <string name="excited_task">Create a to-do list</string>
    <string name="disgust_task">Practice gratitude</string>
    <string name="happy_task">Call a friend for a laugh</string>
    <string name="in_love_task">Write a heartfelt message</string>
    <string name="angry_task">Engage in physical activity</string>
    <string name="shy_task">Strike up a conversation</string>
    <string name="disappointed_task">Reflect and learn from it</string>

    <string name="title_activity_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="every_chall"><b>"Every challenge you encounter in life is a fork in the road. You have the choice to choose which way to go - backward, forward, breakdown or breakthrough."</b>\n\n-Ifeanyi Enoch Onuoha
</string>


    <string name="quote_for_y">\Quote For You</string>
    <string name="here_s_a_da">Here\'s a daily dose of motivation and wisdom to kickstart your day and fuel your dreams!\n</string>
    <string name="suggestion"><strong>Suggestion</strong></string>
    <string name="consider_ta">Consider taking a short walk outside to clear your mind and reduce stress. Even a few minutes can have a positive impact on your mood and provide much-needed clarity.</string>
    <string name="app_suggestion" />
    <string name="min_walk">10 min walk</string>
    <string name="breathing_e"><b>Breathing Exercise</b></string>
    <string name="surround_yo">Surround yourself with these colors!</string>
    <string name="breathe"><b>Breathe</b></string>
    <string name="s_inhale"><b>4s</b>\nINHALE</string>
    <string name="s_hold"><b>4s</b>\nHOLD</string>
    <string name="s_exhale"><b>6s</b>\nEXHALE</string>
    <string name="s_hold1"><b>2s</b>\nHOLD</string>
    <string name="by_surround">By surrounding yourself with these colors you can expect a psychological boost as these colors affect how you take in everything.</string>
</resources>